--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-git+https://github.com/huggingface/diffusers.git
-torch==2.0.1+cu118; sys_platform != 'darwin'
-torch==2.0.1; sys_platform == 'darwin'
-torchvision==0.15.2+cu118; sys_platform != 'darwin'
-torchvision==0.15.2; sys_platform == 'darwin'
-torchaudio==2.0.2+cu118; sys_platform != 'darwin'
-torchaudio==2.0.2; sys_platform == 'darwin'
+--extra-index-url git+https://github.com/huggingface/diffusers.git
+torch
+torchvision
+torchaudio
 huggingface_hub
-transformers==4.30.2
+transformers
 gradio
 soundfile
 progressbar
