--- a/cog.yaml
+++ b/cog.yaml
@@ -26,7 +26,7 @@ build:
     - "chardet==5.2.0"
     - "numpy==1.23.5"
     - "soundfile==0.12.1"
-    - "librosa==0.9.2"
+    - "librosa"
     - "scipy==1.11.2"
     - "pandas==2.1.0"
     - "unidecode==1.3.6"
